tests/field/undefined.my
class Foo:
foo = Foo()

foo.bar # expect runtime error: Undefined property 'bar'.
